Implemented GetAllBooks method to retrieve all books and GetBookById method to retrieve a specific book by its ID

--- a/LibraryManagementSystem/appsettings.json
+++ b/LibraryManagementSystem/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-EBGDS2LB;Database=LibraryManagementSystem;Integrated Security=true;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
